fix vercel deploy

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-textarea-autosize": "^8.4.0",
     "reactflow": "^11.7.0",
     "rehype-highlight": "^6.0.0",
+    "stream-browserify": "^3.0.0",
     "yield-stream": "^2.3.0"
   },
   "devDependencies": {
